--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<script src="http://feeds.feedburner.com/JordonsItBlog?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/JordonsItBlog"></a><br/>Powered by FeedBurner</p> </noscript>
 						
 						<h1>Welcome to Jordon's Website!</h1>
-						<p><img class="image" src="images/images/me.PNG" alt="This is me!" style="float: right; position: relative;"/>
+						<p><img class="image" src="images/images/me.png" alt="This is me!" style="float: right; position: relative;"/>
 						This website has programs that I have made, all my achievements, hardware and software videos and tips and more.
 						Hello my name is Jordon, I like computers and I am good at programming. I have even developed this website through code.
 						I know quite a lot about programming, I know how to code in: Python, HTML, CSS, VBA, JavaScript, C#.</p>
