--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 						
 						<script src="https://apis.google.com/js/platform.js" async defer></script>
 						<div class="g-plus" data-action="share" ... ></div>
+						<div class="g-follow" data-href="https://plus.google.com/{pageId}" data-rel="{relationshipType}"></div>
 						
 						<h1>Welcome to Jordon's Website!</h1>
 						<p><img class="image" src="images/images/me.png" alt="This is me!" style="float: right; position: relative;"/>
