--- a/help.html
+++ b/help.html
@@ -38,7 +38,7 @@
 								<input type="submit" value="Google Search" /></td></tr>
 							<tr><td align="center" style="font-size:75%">
 								<input type="checkbox"  name="sitesearch"
-								value="94.194.84.37" checked /> Search Jordon's Website only<br />
+								value="jordonbc.github.io" checked /> Search Jordon's Website only<br />
 							</td></tr></table>
 						</div>
 					</form>
