--- a/noBlock.html
+++ b/noBlock.html
@@ -27,9 +27,9 @@
 			<div class="wrapper" width="device-width">
 				<content>
 					<aside>
-						<h1>My Software</h1>
+						<h1>My S0f7W@(3</h1>
 					</aside>
-						<p>This is some software I wrote:</p>
+						<p>This is some S0f7W@(3 I wrote:</p>
 						
 						<article>
 							<br>
@@ -53,7 +53,7 @@
 							</div>
 							
 							<h3>Glass OS</h3>
-							<p>Glass OS is my most updated program. Its basically a software overlay that goes over the current operation system such Microsoft Windows or Linux.
+							<p>Glass OS is my most updated program. Its basically a S0f7W@(3 overlay that goes over the current operation system such Microsoft Windows or Linux.
 							It can be ran in full-screen more or it can run in windowed mode by pressing "ESC". Glass OS is a Graphical user interface that allows the user to customise their user interface.
                             Glass OS currently uses over 2,000 lines of python code and I will continue to develop it for the next few years.</p>
 							<p style="text-align: left;">Here's a video that I made that shows off Glass OS:</p>
