--- a/software.html
+++ b/software.html
@@ -79,7 +79,7 @@
 							<a class="download" href="files/download/jordonOS.zip" target="_blank">Download Jordon OS v2</a>
 							<br>
 							<br>
-							<a class="download" href="files/download/jordonOS.zip" target="_blank">Download the User Manual for Jordon OS v2</a>
+							<a class="download" href="files/download/jordonOS.pdf" target="_blank">Download the User Manual for Jordon OS v2</a>
 							
 							
 							<h3>Currency Converter</h3>
