--- a/software.html
+++ b/software.html
@@ -84,7 +84,8 @@
 							
 							<h3>Currency Converter</h3>
 							<p>Currency Converter is a program that is used to convert currency from one to another.</p>
-							<a class="download" href="files/download/Currency Converter.zip" target="_blank">Download Now!</a>
+							<a class="download" href="files/download/Currency ConverterPy.zip" target="_blank">Download Currency Converter Python</a>
+							<a class="download" href="files/download/Currency ConverterVBA.zip" target="_blank">Download Currency Converter VBA</a>
 						</article>
 				</content>
 			</div>
