--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<p><img class="image" src="images/images/me.png" alt="This is me!" style="float: right; position: relative;"/>
 						This website has programs that I have made, all my achievements, hardware and software videos and tips and more.
 						Hello my name is Jordon, I like computers and I am good at programming. I have even developed this website through code.
-						I know quite a lot about programming, I know how to code in: Python, HTML, CSS, VBA, JavaScript, C# and I am currently learning to code in C++ by watching this <a href="https://www.youtube.com/watch?v=ABRP_5RYhqU" target="_blank">series</a>.</p>
+						I know quite a lot about programming, I know how to code in: Python, HTML, CSS, VBA, JavaScript, C# and I am currently learning to code in C++ by watching this <a href="http://www.youtube.com/playlist?list=PLAE85DE8440AA6B83" target="_blank">series</a>.</p>
 						<p>This website is also going to improve my skills as I am also coding it. At the moment the website has my programs
 						that I have made in the past. On this website I also have my life story and what I did in the past to make me good on computers</p>
 						<p>&nbsp</p>
