--- a/software.html
+++ b/software.html
@@ -87,6 +87,9 @@
 							<img class="image" src="images/images/currencyConverter.PNG" style="border: 1px black solid" width="device-width" alt="This is the currency converter that I made"/>
 							
 							<p>Currency Converter is a program that is used to convert currency from one to another.</p>
+							
+							<img src="images/images/curencyConverterCode.PNG" style="width: 75%;" alt="This is the currency converter that I made"/>
+							<p>This is my Visual Basic Code.</p>
 							<a class="download" href="files/download/Currency ConverterPy.zip" target="_blank">Download Currency Converter Python</a>
 							<a class="download" href="files/download/Currency ConverterVBA.zip" target="_blank">Download Currency Converter VBA</a>
 						</article>
