--- a/cv.html
+++ b/cv.html
@@ -50,7 +50,7 @@ or go and do an apprenticeship.</p>
  <li>Patience – I have lots of patience</li>
  <li>Good Problem Solver – I can solve programming problems</li>
  <li>Programming and the ability to learn quickly – I have taught myself how to program Python, HTML, CSS, VBA, JavaScript, C#. I have used these to 
- develop websites and apps such as a currency calculator and desktop environment (<a href="https://github.com/jordonbc/glassos">https://github.com/jordonbc/glassos</a>).</li>
+ develop websites and apps such as a currency calculator and desktop environment (<a href="https://github.com/jordonbc/glassos" target="_blank">https://github.com/jordonbc/glassos</a>).</li>
 </ul>
 
 <h2>WORK HISTORY AND EXPERIENCE</h2>
