--- a/help.html
+++ b/help.html
@@ -6,6 +6,12 @@
 		<link rel="stylesheet" type="text/css" href="mobile.css" media="screen and (max-width: 1335px)">
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css' media="screen and (min-width: 1336px)">
 		<link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css' media="screen and (min-width: 1336px)">
+		
+		<link rel="alternate stylesheet" type="text/css" href="styles/dark/darkTheme.css" title="dark">
+		<link rel="alternate stylesheet" type="text/css" href="styles/orange/orangeTheme.css" title="orange">
+		
+		<script type="text/javascript" src="scripts/styleSwitcher.js"></script>
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
@@ -23,6 +29,11 @@
 							
 						<a class="active" href="help.html" style="float: right;">Help</a>
 					</nav>
+				</div>
+				<div class="cssbar">
+                        <a href="#" onclick="setActiveStyleSheet('default')">Default</a>
+						<a href="#" onclick="setActiveStyleSheet('dark')">Dark</a>
+						<a href="#" onclick="setActiveStyleSheet('orange')">Orange</a>
 				</div>
 			<div class="wrapper" width="device-width">
 				<content>
