--- a/links.html
+++ b/links.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Jordon's Website - Links</title>
+		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="main.css" media="screen and (min-width: 1000px)">
 		<link rel="stylesheet" type="text/css" href="mobile.css" media="screen and (max-width: 999px)">
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css' media="screen and (min-width: 1336px)">
@@ -15,7 +16,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	</head>
 	<body>
-		<center>
+		<div align="center">
 			<div class="topbar">
 					<nav>
 						<img src="images/title/logo.png" alt="My logo" width="60" height="60"/>
@@ -48,6 +49,6 @@
 					</ul>
 				</content>
 			</div>
-		</center>
+		</div>
 	</body>
 </html>
