--- a/sitemap.html
+++ b/sitemap.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Jordon's Website - Sitemap</title>
+		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="main.css" media="screen and (min-width: 1000px)">
 		<link rel="stylesheet" type="text/css" href="mobile.css" media="screen and (max-width: 999px)">
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css' media="screen and (min-width: 1336px)">
@@ -15,7 +16,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	</head>
 	<body>
-		<center>
+		<div align="center">
 			<div class="topbar">
 					<nav>
 						<img src="images/title/logo.png" alt="My logo" width="60" height="60"/>
@@ -46,14 +47,25 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="software.html">Software</a></li>
+						<ul>
+                            <li><a href="files/download/Jordon's Online Browser.zip">Jordon's Online Browser Download</a></li>
+                            <li><a href="https://github.com/Jordonbc/GlassOS.git">Glass OS Repository Link</a></li>
+                            <li><a href="files/download/jordonOS.zip">Jordon OS V2 Download</a></li>
+                            <li><a href="files/download/jordonOS.pdf">Jordon OS Manual Download</a></li>
+                            <li><a href="files/download/Currency ConverterPy.zip">Currency converter Python Download</a></li>
+                            <li><a href="files/download/Currency ConverterVBA.zip">Currency Converter VBA Download</a></li>
+                        </ul>
 						<li><a href="hardware.html">Hardware</a></li>
 						<li><a href="cv.html">CV</a></li>
+						<ul>
+                            <li><a href="https://github.com/Jordonbc/GlassOS.git">Glass OS Repository Link</a></li>
+						</ul>
 						<li><a href="about.html">About</a></li>
 						<li><a href="links.html">Links</a></li>
 						<li><a href="sitemap.html">Sitemap</a></li>
 					</ul>
 				</content>
 			</div>
-		</center>
+		</div>
 	</body>
 </html>
