--- a/software.html
+++ b/software.html
@@ -71,7 +71,7 @@
 							It can be ran in full-screen more or it can run in windowed mode by pressing "ESC". Glass OS is a Graphical user interface that allows the user to customise their user interface.
                             Glass OS currently uses over 2,000 lines of python code and I will continue to develop it for the next few years.</p>
 							<p style="text-align: left;">Here's a video that I made that shows off Glass OS:</p>
-							<iframe class="large" src="https://www.youtube.com/embed/TG1wW_1cYe8?rel=0" frameborder="0" allowfullscreen></iframe>
+							<iframe src="https://www.youtube.com/embed/TG1wW_1cYe8?rel=0" frameborder="0" allowfullscreen></iframe>
 							<br>
 							<a class="download" href="https://github.com/Jordonbc/GlassOS.git" target="_blank">The repository link</a>
 							
