--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						
 						
 						<h1>Welcome to Jordon's Website!</h1>
-						<p><img class="meImage" src="images/images/me.png" alt="This is me!" style="float: right; position: relative;"/>
+						<p><img class="meImage" src="images/images/me.png" alt="This is me!" style="float: right;"/>
 						This website has programs that I have made, all my achievements, hardware and software videos and tips and more.
 						Hello my name is Jordon, I like computers and I am good at programming. I have even developed this website through code.
 						I know quite a lot about programming, I know how to code in: Python, HTML, CSS, VBA, JavaScript, C# and I am currently learning to code in C++ by watching this <a href="https://www.youtube.com/watch?v=tvC1WCdV1XU&list=PLAE85DE8440AA6B83&index=1" target="_blank">series</a>.</p>
