--- a/software.html
+++ b/software.html
@@ -106,6 +106,7 @@
 							<p>This is my Visual Basic Code.</p>
 							<a class="download" href="files/download/Currency ConverterPy.zip" target="_blank">Download Currency Converter Python</a>
 							<a class="download" href="files/download/Currency ConverterVBA.zip" target="_blank">Download Currency Converter VBA</a>
+							<a class="download" href="files/download/currency CalculatorCpp.zip" target="_blank">Download Currency Converter C++ Source</a>
 						</article>
 				</content>
 			</div>
