--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css' media="screen and (min-width: 1336px)">
 		<link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css' media="screen and (min-width: 1336px)">
 		
-		<link rel="alternate stylesheet" type="text/css" href="styles/dark/darkTheme.css" title="dark">
+		<link rel="alternate stylesheet" type="text/css" href="styles/wide/wide.css" title="wide">
+        
+		<link rel="stylesheet" type="text/css" href="styles/dark/darkTheme.css" title="dark">
 		<link rel="alternate stylesheet" type="text/css" href="styles/orange/orangeTheme.css" title="orange">
-		
+
 		<script type="text/javascript" src="scripts/styleSwitcher.js"></script>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -32,9 +34,9 @@
 					</nav>
 				</div>
 				<div class="cssbar">
-                        <a href="#" onclick="setActiveStyleSheet('default')">Default</a>
-						<a href="#" onclick="setActiveStyleSheet('dark')">Dark</a>
-						<a href="#" onclick="setActiveStyleSheet('orange')">Orange</a>
+                        <a href="#" class="left" onclick="setActiveStyleSheet('default')">Default</a>
+						<a href="#" class="left" onclick="setActiveStyleSheet('dark')">Dark</a>
+						<a href="#" class="left" onclick="setActiveStyleSheet('orange')">Orange</a>
 				</div>
 			<div class="wrapper" width="device-width">
 				<content>
