--- a/cv.html
+++ b/cv.html
@@ -171,7 +171,7 @@ accredited vocational learning etc.</p>-->
 servers for websites, files and general purpose.</p>
 <!--<p>Finally, a small section describing your life and commitments outside of work, ideally in relation to the kind of job you’re applying for.  Include (where appropriate) 
 membership of any clubs, groups or societies... look to include anything that emphasizes your character, interests, and unique selling points.</p>-->
-
+<article>
 <div style="overflow-x:auto;">
 	<table border="1" style="width: 75%">
 		<tr>
@@ -188,6 +188,7 @@ membership of any clubs, groups or societies... look to include anything that em
 		</tr>
 	</table>
 </div>
+</article>
 				</article>
 				</content>
 			</div>
