--- a/hardware.html
+++ b/hardware.html
@@ -40,7 +40,7 @@
 				<content>
 					<article>
 						<h1>Hardware</h1>
-						<p>I have built several computers in the past. On this webpage i will show you how to build computers and my specifcations of all my devices.</p>
+						<p>I have built several computers in the past. On this webpage I will show you how to build computers and my specifications of all my devices.</p>
 						
 						<p>Required Parts for a computer to Function:</p>
 						<ul>
@@ -64,7 +64,7 @@
 						<h1>My PC Build</h1>
 						<video controls>
 							<source src="files/videos/PC Strip and build.mp4" type="video/mp4">
-							Your browser does not support the video. :(
+							Hey! Your browser does not support the video. :(
 						</video>
 						
 						<p>My Main Computer Setup (Gaming PC)</p>
