--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> <!-- Defines HTML code, for browser compatibility -->
 	<head> <!-- Defines the header of the website -->
 		<title>Jordon's Website - Home</title> <!-- Sets the title of the website-->
+		
 		<meta charset="UTF-8"> <!-- Sets the character set used by the website -->
 		
 		<!-- Links the Cascading style sheets to the website -->
@@ -16,7 +17,7 @@
 		
 		<!-- Links alternative style sheets so that the user can choose their own -->
         
-		<link rel="stylesheet" type="text/css" href="styles/dark/darkTheme.css" title="dark">
+		<link rel="alternate stylesheet" type="text/css" href="styles/dark/darkTheme.css" title="dark">
 		<link rel="alternate stylesheet" type="text/css" href="styles/orange/orangeTheme.css" title="orange">
 
 		<!-- JavaScript for switching Cascading style sheet -->
