--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE HTML> <!-- Sets the document type to HTML 5 -->
 <html> <!-- Defines HTML code, for browser compatibility -->
 	<head> <!-- Defines the header of the website -->
+		
+		<meta name="author" content="Jordon" >
+		<meta name="description" content="Jordon Brooks">
+		<meta name="keywords" content="Jordon, Brooks, Jordon's, Software, jordonbc's, Website, GlassOS, Glass, OS,
+		Jpad, Open, Source, web, browser">		
+		
 		<title>Jordon's Website - Home</title> <!-- Sets the title of the website-->
 		
 		<meta charset="UTF-8"> <!-- Sets the character set used by the website -->
