Added meta data

--- a/help.html
+++ b/help.html
@@ -2,6 +2,12 @@
 <html>
 	<head>
 		<title>Jordon's Website - Help</title>
+        
+        <meta name="author" content="Jordon Brooks" >
+		<meta name="description" content="Search for answers">
+		<meta name="keywords" content="Jordon, Brooks, Jordon's, Software, jordonbc's, Website, GlassOS, Glass, OS,
+		Jpad, Open, Source, web, browser, JDE, Desktop, Environment, jordons, jordon, python, programming, software">
+        
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="main.css" media="screen and (min-width: 1000px)">
 		<link rel="stylesheet" type="text/css" href="mobile.css" media="screen and (max-width: 999px)">
