--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html> <!-- Defines HTML code, for browser compatibility -->
 	<head> <!-- Defines the header of the website -->
 		
-		<meta name="author" content="Jordon" >
-		<meta name="description" content="Jordon Brooks">
+		<meta name="author" content="Jordon Brooks" >
+		<meta name="description" content="Welcome to Jordon's Website!">
 		<meta name="keywords" content="Jordon, Brooks, Jordon's, Software, jordonbc's, Website, GlassOS, Glass, OS,
-		Jpad, Open, Source, web, browser">		
+		Jpad, Open, Source, web, browser, JDE, Desktop, Environment, jordons, jordon, python, programming, software">
 		
 		<title>Jordon's Website - Home</title> <!-- Sets the title of the website-->
 		
