--- a/software.html
+++ b/software.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html> <!-- Defines the document type to HTML 5 -->
 <html> <!-- Sets the page to HTML 5 for compatibility with browsers -->
 	<head> <!-- Defines the Header of the page -->
+        
+        <meta name="author" content="Jordon Brooks" >
+		<meta name="description" content="The magic stuff">
+		<meta name="keywords" content="Jordon, Brooks, Jordon's, Software, jordonbc's, Website, GlassOS, Glass, OS,
+		Jpad, Open, Source, web, browser, JDE, Desktop, Environment, jordons, jordon, python, programming, software">
+        
 		<title>Jordon's Website - Software</title> <!-- Sets the title of the page -->
 		<meta charset="UTF-8"> <!-- Sets the character set used the the website -->
 
