--- a/cv.html
+++ b/cv.html
@@ -45,33 +45,37 @@
 			<div class="wrapper" width="device-width">
 				<content>
 				<article>
-					<h1>PERSONAL PROFILE</h1>
+					<h1 id="personalprofile">PERSONAL PROFILE</h1>
 <p>Email: <a href="mailto:jordonIT@outlook.com">jordonIT@outlook.com</a></p>
 
-<p>I am a hard worker; I like to try my best at all times. I have experience with servers, Windows and Linux as well as windows, OS X and Linux. 
-I am good with hardware as well as software. I am currently working on a level 2 course at Chesterfield College. Next year I would like to either go on 
-an apprenticeship or go the level 3 course.</p>
-
-
-<p>I am hoping to achieve in the next few years a better understanding of computers while at college. I would also like to go and do a level 3 
+<p>I am a hard worker; I like to try my best at all times. I have experience with windows, Mac and Linux operating systems. I am good with hardware as well as software.
+<br><br>
+    On the software side of things I have made my own programs which can me found at my website I coded ( <a href="https://jordonbc.github.io">https://jordonbc.github.io</a> ).
+<br><br>
+    On other hand, I have also built computers, networks and upgraed existing computers with newer hardware.
+<br><br>
+    I have currently completed a level 2 course at Chesterfield College. Next year I would like to go on to the level 3 games and apps development course.
+    
+<br><br>
+    I am hoping to achieve in the next few years a better understanding of computers while at college. I would also like to go and do a level 3 
 or go and do an apprenticeship.</p>
 
 
-<h2>KEY SKILLS</h2>
+<h2 id="keyskills">KEY SKILLS</h2>
 
 <!--<p>Three or four of your core skills / qualities (bullet-pointed, with evidence), in specific relation to the particular job / role, e.g:</p>-->
 <ul>
  <li>Flexible – I don’t mind working extra hours</li>
  <li>Good Time keeper – I can meet deadlines</li>
- <li>Good team player - I can work well in a team</li>
+ <li>Good team player - I can work well within in a team</li>
  <li>Good Computer Skills – I am good at working on computers</li>
- <li>Patience – I have lots of patience</li>
+ <li>Patience – I don't mind waiting</li>
  <li>Good Problem Solver – I can solve programming problems</li>
  <li>Programming and the ability to learn quickly – I have taught myself how to program Python, HTML, CSS, VBA, JavaScript, C#. I have used these to 
- develop websites and apps such as a currency calculator and desktop environment (<a href="https://github.com/jordonbc/glassos" target="_blank">https://github.com/jordonbc/glassos</a>).</li>
+ develop websites and apps such as a currency calculator and a desktop environment (<a href="software.html" target="_blank">https://jordonbc.github.io/software.html</a>).</li>
 </ul>
 
-<h2>WORK HISTORY AND EXPERIENCE</h2>
+<h2 id="workexperience">WORK HISTORY AND EXPERIENCE</h2>
 
 <!--<p>Starting with the most recent, list your employers, ACCURATE dates of employment (these will be checked against P45s), the job role, key responsibilities, 
 and your main achievement within that role, e.g:</p>-->
@@ -82,7 +86,7 @@ and your main achievement within that role, e.g:</p>-->
 <li>Frederick Gent School</li>
 </ul>
 
-<h2>EDUCATION AND QUALIFICATIONS</h2>
+<h2 id="educationandqualifactions">EDUCATION AND QUALIFICATIONS</h2>
 
 <!--<p>Again, starting with the most recent, your qualifications, dates attained, and places of study, e.g.</p>-->
 
@@ -98,7 +102,7 @@ and your main achievement within that role, e.g:</p>-->
 	<tr>
 		<td>Chesterfield College</td>
 		<td>BTEC Level 2 First Diploma in Information & Creative Technology</td>
-		<td>Expected Pass</td>
+		<td>Pass</td>
 		<td>September 2015</td>
 		<td>September 2016</td>
 	</tr>
@@ -167,17 +171,17 @@ and your main achievement within that role, e.g:</p>-->
 <!--<p>Include any developmental activities / studies you have undertaken within the work place, in reverse chronological order, e.g. seminars, training workshops, 
 accredited vocational learning etc.</p>-->
 
-<h2>ADDITIONAL INFORMATION</h2>
+<h2 id="additionalInformation">ADDITIONAL INFORMATION</h2>
 
 
 
-<h3>HOBBIES AND INTERESTS</h3>
+<h3 id="hobbiesandinterensts">HOBBIES AND INTERESTS</h3>
 
-<p>I have been working on programming projects such as my own desktop environment for windows, mac and Linux, Programming my own website using notepad, I have been setting up
-servers for websites, files and general purpose.</p>
+<p>I have been working on programming projects such as my own desktop environment for Windows, Mac and Linux, coding my own website using notepad.</p>
 <!--<p>Finally, a small section describing your life and commitments outside of work, ideally in relation to the kind of job you’re applying for.  Include (where appropriate) 
 membership of any clubs, groups or societies... look to include anything that emphasizes your character, interests, and unique selling points.</p>-->
 <article>
+<h3 id="references">REFERENCES</h3>
 <div style="overflow-x:auto;">
 	<table border="1" style="width: 75%">
 		<tr>
