--- a/cv.html
+++ b/cv.html
@@ -71,8 +71,7 @@ or go and do an apprenticeship.</p>
  <li>Good Computer Skills – I am good at working on computers</li>
  <li>Patience – I don't mind waiting</li>
  <li>Good Problem Solver – I can solve programming problems</li>
- <li>Programming and the ability to learn quickly – I have taught myself how to program Python, HTML, CSS, VBA, JavaScript, C#. I have used these to 
- develop websites and apps such as a currency calculator and a desktop environment (<a href="software.html" target="_blank">https://jordonbc.github.io/software.html</a>).</li>
+ <li>Programming and the ability to learn quickly – I have taught myself how to program Python 2 and 3, HTML 5, CSS 3, C++. I have used these to develop websites and apps such as a currency calculator and a desktop environment (<a href="software.html" target="_blank">https://jordonbc.github.io/software.html</a>).</li>
 </ul>
 
 <h2 id="workexperience">WORK HISTORY AND EXPERIENCE</h2>
@@ -100,12 +99,53 @@ and your main achievement within that role, e.g:</p>-->
 		<th colspan="2">Dates From / To</th>
 	</tr>
 	<tr>
-		<td>Chesterfield College</td>
-		<td>BTEC Level 2 First Diploma in Information & Creative Technology</td>
-		<td>Pass</td>
-		<td>September 2015</td>
-		<td>September 2016</td>
+		<td rowspan="11">Chesterfield College</td>
+		<td>BTEC Software Development Level 2</td>
+		<td>Distinction</td>
+		<td rowspan="11">September 2015</td>
+		<td rowspan="11">September 2016</td>
 	</tr>
+    <tr>
+        <td>BTEC Website Development Level 2</td>
+        <td>Distinction</td>
+    </tr>
+    <tr>
+        <td>BTEC Creating Digital Graphics Level 2</td>
+        <td>Distinction</td>
+    </tr>
+    <tr>
+        <td>BTEC A Digital Portfolio Level 2</td>
+        <td>Distinction</td>
+    </tr>
+    <tr>
+        <td>BTEC Multimedia Products Development Level 2</td>
+        <td>Distinction</td>
+    </tr>
+    <tr>
+        <td>BTEC The Online World Level 2</td>
+        <td>Pass</td>
+    </tr>
+    <tr>
+        <td>BTEC Technology Systems Level 2</td>
+        <td>Pass</td>
+    </tr>
+    <tr>
+        <td>BTEC Computing in the Workplace Level 2</td>
+        <td>Pass</td>
+    </tr>
+    <tr>
+        <td>BTEC Computational Thinking Level 2</td>
+        <td>Pass</td>
+    </tr>
+    <tr>
+        <td>BTEC Computer Networks Level 2</td>
+        <td>Pass</td>
+    </tr>
+    <tr>
+        <td>BTEC Building A Personal Computer Level 2</td>
+        <td>Pass</td>
+    </tr>
+        
 	<tr>
 		<td rowspan="14">Frederick Gents School</td>
 		<td>GCSE Programming Project</td>
