--- a/software.html
+++ b/software.html
@@ -14,6 +14,8 @@
 		
 		<link rel="stylesheet" type="text/css" href="main.css" media="screen and (min-width: 1000px)">
 		<link rel="stylesheet" type="text/css" href="mobile.css" media="screen and (max-width: 999px)">
+        
+        <link rel="stylesheet" type="text/css" href="styles/orange/orangeTheme.css">
 		
 		<!-- For the user Themes -->		
 		
@@ -21,7 +23,6 @@
 		<link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css' media="screen and (min-width: 1336px)">
 		
 		<link rel="alternate stylesheet" type="text/css" href="styles/dark/darkTheme.css" title="dark"> <!-- Dark Theme -->
-		<link rel="alternate stylesheet" type="text/css" href="styles/orange/orangeTheme.css" title="orange"> <!-- Orange Theme -->
 		
 		<script type="text/javascript" src="scripts/styleSwitcher.js"></script> <!-- JavaScript for the CSS Changer -->
 		
@@ -46,11 +47,11 @@
 						<a href="help.html" style="float: right;">Help</a>
 					</nav> <!-- End of navigation -->
 				</div> <!-- End of topbar -->
-				<div class="cssbar"> <!-- Defines CSS bar -->
-                        <a href="#" onclick="setActiveStyleSheet('default')">Default</a> <!-- Changes to default css -->
-						<a href="#" onclick="setActiveStyleSheet('dark')">Dark</a> <!-- Sets to dark CSS -->
-						<a href="#" onclick="setActiveStyleSheet('orange')">Orange</a> <!-- Sets to Orange CSS -->
-				</div> <!-- End of CSS bar -->
+				<!--<div class="cssbar">
+                        <a href="#" onclick="setActiveStyleSheet('default')">Default</a>
+						<a href="#" onclick="setActiveStyleSheet('dark')">Dark</a> 
+						<a href="#" onclick="setActiveStyleSheet('orange')">Orange</a>
+				</div>-->
 				
 			<!-- START OF Wrapper -->			
 			
