--- a/about.html
+++ b/about.html
@@ -12,11 +12,13 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="main.css" media="screen and (min-width: 1000px)">
 		<link rel="stylesheet" type="text/css" href="mobile.css" media="screen and (max-width: 999px)">
+        
+        <link rel="stylesheet" type="text/css" href="styles/orange/orangeTheme.css">
+        
 		<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css' media="screen and (min-width: 1336px)">
 		<link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css' media="screen and (min-width: 1336px)">
 		
 		<link rel="alternate stylesheet" type="text/css" href="styles/dark/darkTheme.css" title="dark">
-		<link rel="alternate stylesheet" type="text/css" href="styles/orange/orangeTheme.css" title="orange">
 		
 		<script type="text/javascript" src="scripts/styleSwitcher.js"></script>
 		
@@ -38,11 +40,13 @@
 						<a href="help.html" style="float: right;">Help</a>
 					</nav>
 				</div>
+<!--
 				<div class="cssbar">
                         <a href="#" onclick="setActiveStyleSheet('default')">Default</a>
 						<a href="#" onclick="setActiveStyleSheet('dark')">Dark</a>
 						<a href="#" onclick="setActiveStyleSheet('orange')">Orange</a>
 				</div>
+-->
 			<div class="wrapper" width="device-width">
 				<content>
 					<article>
