--- a/about.html
+++ b/about.html
@@ -53,12 +53,12 @@
 						<h1>My Entire Story on how I became interested with computers</h1>
 						
 						<p>Once upon a time there was a young boy called Jordon, he liked using computers for playing games and surfing the Internet. When he was about five he got his first computer that
-						his granddad has built him. It had a white case and wasn't very powerful, in fact it was running Microsoft windows 98 which were good for that time before
+						his granddad has built him. It had a white case and wasn't very powerful, in fact it was running Microsoft Windows 98 which were good for that time before
 						Microsoft windows xp. As he got to secondary school, he found friends. After many years of not having a father,
 						he was luckily enough to get a step father. When Jordon got to primary school he liked helping people trying to fix the
 						schools computer. In year eight he had to make a website so he learned to use dream-weaver but he did not like the appearance of dragging boxes to make websites as they were quite bad.
 						When he got to year 10 he started programing on a small computer called a raspberry pi. His parents had also bought him a raspberry pi for dummies and Jordon used thats
-						book to learn how to make a simple website. As years passed he developed his skills and branched his programming into many more languages. - A true story.</p>
+						book to learn how to make a simple website. As years passed he developed his skills and branched his programming into many more languages.</p>
 						<img class="image" src="images/images/me.png" alt="This is me!"/>
 					</article>
 				</content>
