--- a/cv.html
+++ b/cv.html
@@ -51,30 +51,25 @@
 					<h1 id="personalprofile">PERSONAL PROFILE</h1>
 <p>Email: <a href="mailto:jordonIT@outlook.com">jordonIT@outlook.com</a></p>
 
-<p>I am a hard worker; I like to try my best at all times. I have experience with windows, Mac and Linux operating systems. I am good with hardware as well as software.
+<p>I am a hard worker. I always try my best. I have experience with windows, Mac and Linux. I am good with hardware and software.
 <br>
-    On the software side of things I have made my own programs which can me found at my website I coded ( <a href="https://jordonbc.github.io">https://jordonbc.github.io</a> ).
-<br>
-    On other hand, I have also built computers, networks and upgraed existing computers with newer hardware.
-<br>
-    I have currently completed a level 2 course at Chesterfield College. Next year I would like to go on to the level 3 games and apps development course.
-    
-<br>
-    I am hoping to achieve in the next few years a better understanding of computers while at college. I would also like to go and do a level 3 
-or go and do an apprenticeship.</p>
+    On the software side of things I can program in C++, Python, HTML and CSS. I can setup servers using Apache.
+ 
+    On other hand, I have also built computers, networks and upgraded and fixed existing computers.
+</p>
 
 
 <h2 id="keyskills">KEY SKILLS</h2>
 
 <!--<p>Three or four of your core skills / qualities (bullet-pointed, with evidence), in specific relation to the particular job / role, e.g:</p>-->
 <ul>
- <li>Flexible – I don’t mind working extra hours</li>
- <li>Good Time keeper – I can meet deadlines</li>
- <li>Good team player - I can work well within in a team</li>
- <li>Good Computer Skills – I am good at working on computers</li>
- <li>Patience – I don't mind waiting</li>
- <li>Good Problem Solver – I can solve programming problems</li>
- <li>Programming and the ability to learn quickly – I have taught myself how to program Python 2 and 3, HTML 5, CSS 3, C++. I have used these to develop websites and apps such as a currency calculator and a desktop environment (<a href="software.html" target="_blank">https://jordonbc.github.io/software.html</a>).</li>
+    <li>Flexible – I don’t mind working extra hours</li>
+    <li>Good Time keeper – I can meet deadlines</li>
+    <li>Good team player - I can work well within in a team</li>
+    <li>Good Computer Skills – I am good at working on computers</li>
+    <li>Patience – I don't mind waiting</li>
+    <li>Good Problem Solver – I can solve programming problems</li>
+    <li>Programming and the ability to learn quickly – I have taught myself how to program Python 2 and 3, HTML 5, CSS 3, C++. I have used these to develop websites and apps.</li>
 </ul>
 
 <h2 id="workexperience">WORK HISTORY AND EXPERIENCE</h2>
@@ -83,9 +78,9 @@ or go and do an apprenticeship.</p>
 and your main achievement within that role, e.g:</p>-->
 
 <ul>
-<li>Chesterfield College</li>
-<li>Young Enterprise</li>
-<li>Frederick Gent School</li>
+    <li>Chesterfield College</li>
+    <li>Young Enterprise</li>
+    <li>Frederick Gent School</li>
 </ul>
 
 <h2 id="educationandqualifactions">EDUCATION AND QUALIFICATIONS</h2>
@@ -102,12 +97,24 @@ and your main achievement within that role, e.g:</p>-->
 		<th colspan="2">Dates From / To</th>
 	</tr>
 	<tr>
-		<td rowspan="11">Chesterfield College</td>
-		<td>BTEC Software Development Level 2</td>
-		<td>Distinction</td>
-		<td rowspan="11">September 2015</td>
-		<td rowspan="11">September 2016</td>
+		<td rowspan="14">Chesterfield College</td>
+        <td>Functional English Speaking, listening and communication at Level 1</td>
+        <td>Pass</td>
+		<td rowspan="14">September 2015</td>
+		<td rowspan="14">September 2016</td>
 	</tr>
+    <tr>
+        <td>Functional English Reading at Level 1</td>
+        <td>Pass</td>
+    </tr>
+    <tr>
+        <td>Functional English Writing at Level 1</td>
+        <td>Pass</td>
+    </tr>
+    <tr>
+        <td>BTEC Software Development Level 2</td>
+		<td>Distinction</td>
+    </tr>
     <tr>
         <td>BTEC Website Development Level 2</td>
         <td>Distinction</td>
@@ -181,7 +188,7 @@ and your main achievement within that role, e.g:</p>-->
 		<td>Pass</td>
 	</tr>
 	<tr>
-		<td>GCSE Computer Systems & Programming</td>
+		<td>GCSE Computer Systems and Programming</td>
 		<td>Pass</td>
 	</tr>
 	<tr>
@@ -220,7 +227,7 @@ accredited vocational learning etc.</p>-->
 
 <h3 id="hobbiesandinterensts">HOBBIES AND INTERESTS</h3>
 
-<p>I have been working on programming projects such as my own desktop environment for Windows, Mac and Linux, coding my own website using notepad.</p>
+<p>On my days off I like to explore the world of programming by creating my own software and websites. I currently like to program in C++, Python, HTML and CSS. I also enjoy exploring new operating systems.</p>
 <!--<p>Finally, a small section describing your life and commitments outside of work, ideally in relation to the kind of job you’re applying for.  Include (where appropriate) 
 membership of any clubs, groups or societies... look to include anything that emphasizes your character, interests, and unique selling points.</p>-->
 <article>
