--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 						<a href="about.html">About</a>
 						<a href="links.html">Links</a>
 						<a href="sitemap.html">Sitemap</a>
+                        <a href="games.html">Games</a>
 							
-						<a href="help.html" style="float: right;">Help</a>
+						<!--<a href="help.html" style="float: right;">Help</a>-->
 					</nav> <!-- Closes the HTML 5 navigation tag -->
 				</div> <!-- Closes the Top-bar -->
 				
