--- a/about.html
+++ b/about.html
@@ -36,8 +36,9 @@
 						<a class="active" href="about.html">About</a>
 						<a href="links.html">Links</a>
 						<a href="sitemap.html">Sitemap</a>
+                        <a href="games.html">Games</a>
 							
-						<a href="help.html" style="float: right;">Help</a>
+						<!--<a href="help.html" style="float: right;">Help</a>-->
 					</nav>
 				</div>
 <!--
