--- a/software.html
+++ b/software.html
@@ -43,8 +43,9 @@
 						<a href="about.html">About</a>
 						<a href="links.html">Links</a>
 						<a href="sitemap.html">Sitemap</a>
+                        <a href="games.html">Games</a>
 						
-						<a href="help.html" style="float: right;">Help</a>
+						<!--<a href="help.html" style="float: right;">Help</a>-->
 					</nav> <!-- End of navigation -->
 				</div> <!-- End of topbar -->
 				<!--<div class="cssbar">
