Add offline access!

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML> <!-- Sets the document type to HTML 5 -->
-<html> <!-- Defines HTML code, for browser compatibility -->
+<html manifest="website.appcache"> <!-- Defines HTML code, for browser compatibility -->
 	<head> <!-- Defines the header of the website -->
 		
 		<meta name="author" content="Jordon Brooks" >
