--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<h1>Latest Blog</h1> <!-- Latest Blog title  for http://jordonIT.blogspot.co.uk -->
 						
 						<!-- The script That does all the magic -->
-						<script src="http://feeds.feedburner.com/JordonsItBlog?format=sigpro" type="text/javascript" ></script>
+						<script src="https://feeds.feedburner.com/JordonsItBlog?format=sigpro" type="text/javascript" ></script>
 						
 						<article> <!-- Defines an article -->
 						<h2>Welcome to Jordon's Website!</h2> <!-- The title of the website -->
