--- a/games.html
+++ b/games.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> <!-- Defines the document type to HTML 5 -->
-<html> <!-- Sets the page to HTML 5 for compatibility with browsers -->
+<html manifest="website.appcache"> <!-- Sets the page to HTML 5 for compatibility with browsers -->
 	<head> <!-- Defines the Header of the page -->
         
         <meta name="author" content="Jordon Brooks" >
