--- a/sitemap.html
+++ b/sitemap.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="website.appcache">
 	<head>
         
         <meta name="author" content="Jordon Brooks" >
@@ -74,6 +74,10 @@
 						<li><a href="about.html">About</a></li>
 						<li><a href="links.html">Links</a></li>
 						<li><a href="sitemap.html">Sitemap</a></li>
+                        <li><a href="games.html">Games</a></li>
+                        <ul>
+                            <li><a href="https://jordonbc.github.io/SpaceMasters">Space Masters</a></li>
+                        </ul>
 					</ul>
 				</content>
 			</div>
