--- a/links.html
+++ b/links.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="website.appcache">
 	<head>
         
         <meta name="author" content="Jordon Brooks" >
