Added sign-up and fixed AW play link

--- a/games.html
+++ b/games.html
@@ -60,7 +60,8 @@
                         
                             <p>Alien Wars is a top-down space shooter that is set in the future. The game is still in development and will be released in 2017.</p>
                             
-                            <a class="download" href="https://jordonbc.github.io/alienwars" target="_blank">Play Now!</a>
+							<a class="download" href="http://jordan.bnettech.pw/Signup.html">Sign-up!</a>
+                            <a class="download" href="http://jordan.bnettech.pw/AlienWars" target="_blank">Play Now!</a>
 
 							<br><br>
 
