--- a/games.html
+++ b/games.html
@@ -63,8 +63,8 @@
 							<a class="download" href="http://jordan.bnettech.pw/Signup.html">Sign-up!</a>
                             <a class="download" href="http://jordan.bnettech.pw/AlienWars" target="_blank">Play Now!</a>
 							<br><br>
-							<a class="download" href="files/download/AlienWars/win32.zip" target="_blank">Win32</a>
-							<a class="download" href="files/download/AlienWars/linux32.zip" target="_blank">Linux32</a>
+							<a class="download" href="http://jordan.bnettech.pw/download/win32.zip" target="_blank">Win32</a>
+							<a class="download" href="http://jordan.bnettech.pw/download/linux.zip" target="_blank">Linux32</a>
 
 							<br><br>
 
