--- a/games.html
+++ b/games.html
@@ -64,7 +64,7 @@
                             <a class="download" href="http://jordan.bnettech.pw/AlienWars" target="_blank">Play Now!</a>
 							<br><br>
 							<a class="download" href="http://jordan.bnettech.pw/download/win32.zip" target="_blank">Win32</a>
-							<a class="download" href="http://jordan.bnettech.pw/download/linux.zip" target="_blank">Linux32</a>
+							<a class="download" href="http://jordan.bnettech.pw/download/linux32.zip" target="_blank">Linux32</a>
 
 							<br><br>
 
