--- a/games.html
+++ b/games.html
@@ -75,6 +75,9 @@
                             <p>Space Master is a top-down space shooter. The main goal of Space Master is to shoot as many enemies as possible. Please share your score with your friends.</p>
                             
                             <a class="download" href="https://jordonbc.github.io/SpaceMasters/" target="_blank">Play Now!</a>
+							<br>
+							<br>
+							<a href="https://www.microsoft.com/store/apps/9nblggh4xvc6?ocid=badge"><img src="https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png" height="100" alt="Get it from Microsoft" /></a>
 						</article>
 				</content>
 			</div>
