--- a/about.html
+++ b/about.html
@@ -36,7 +36,8 @@
 						<a class="active" href="about.html">About</a>
 						<a href="links.html">Links</a>
 						<a href="sitemap.html">Sitemap</a>
-                        <a href="games.html">Games</a>
+                        			<a href="games.html">Games</a>
+                        			<a href="https://forum.jordonbc.bnettech.pw">Forums</a>
 							
 						<!--<a href="help.html" style="float: right;">Help</a>-->
 					</nav>
