--- a/cv.html
+++ b/cv.html
@@ -36,7 +36,8 @@
 						<a href="about.html">About</a>
 						<a href="links.html">Links</a>
 						<a href="sitemap.html">Sitemap</a>
-                        <a href="games.html">Games</a>
+                        			<a href="games.html">Games</a>
+                        			<a href="https://forum.jordonbc.bnettech.pw">Forums</a>
 							
 						<!--<a href="help.html" style="float: right;">Help</a>-->
 					</nav>
@@ -98,7 +99,14 @@ and your main achievement within that role, e.g:</p>-->
 		<th colspan="2">Dates From / To</th>
 	</tr>
 	<tr>
-		<td rowspan="14">Chesterfield College</td>
+		<td rowspan="15">Chesterfield College</td>
+        <td>PREVENT and Safeguarding Stratagies Level 2</td>
+        <td>Pass</td>
+		<td rowspan="1">September 2016</td>
+		<td rowspan="1">September 2017</td>
+	</tr>
+	<tr>
+		
         <td>Functional English Speaking, listening and communication at Level 1</td>
         <td>Pass</td>
 		<td rowspan="14">September 2015</td>
