--- a/links.html
+++ b/links.html
@@ -37,6 +37,7 @@
 						<a class="active" href="links.html">Links</a>
 						<a href="sitemap.html">Sitemap</a>
                         <a href="games.html">Games</a>
+                        <a href="https://forum.jordonbc.bnettech.pw">Forums</a>
 							
 						<!--<a href="help.html" style="float: right;">Help</a>-->
 					</nav>
@@ -56,7 +57,6 @@
 					<ul>
 						<li><a href="https://www.youtube.com/channel/UCcFDiYU8pDoV-KE8Vk3rGMQ" target="_blank">My YouTube Channel</a></li>
 						<li><a href="http://www.twitch.tv/jordonbc" target="_blank">My Twitch Channel</a></li>
-						<li><a href="http://fs.frederickgent.derbyshire.sch.uk/st10.jbrooks" target="_blank">My Old Website</a></li>
                         <li><a href="https://www.youtube.com/channel/UCpEoV8Yoegl4NNRTonOGxvQ" target="_blank">The Shady Biker</a> (My Dads YouTube Channel and I am the Editor)</li>
 					</ul>
 				</content>
