--- a/sitemap.html
+++ b/sitemap.html
@@ -36,6 +36,7 @@
 						<a href="links.html">Links</a>
 						<a class="active" href="sitemap.html">Sitemap</a>
                         <a href="games.html">Games</a>
+                        <a href="https://forum.jordonbc.bnettech.pw">Forums</a>
 							
 						<!--<a href="help.html" style="float: right;">Help</a>-->
 					</nav>
@@ -76,6 +77,7 @@
 						<li><a href="sitemap.html">Sitemap</a></li>
                         <li><a href="games.html">Games</a></li>
                         <ul>
+                            <li><a href="jordonbc.bnettech.pw/AlienWars/">Alien Wars</a></li>
                             <li><a href="https://jordonbc.github.io/SpaceMasters">Space Masters</a></li>
                         </ul>
 					</ul>
