--- a/software.html
+++ b/software.html
@@ -43,7 +43,8 @@
 						<a href="about.html">About</a>
 						<a href="links.html">Links</a>
 						<a href="sitemap.html">Sitemap</a>
-                        <a href="games.html">Games</a>
+                        			<a href="games.html">Games</a>
+                        			<a href="https://forum.jordonbc.bnettech.pw">Forums</a>
 						
 						<!--<a href="help.html" style="float: right;">Help</a>-->
 					</nav> <!-- End of navigation -->
