Update PC Build

--- a/hardware.html
+++ b/hardware.html
@@ -77,14 +77,26 @@
 							Hey! Your browser does not support the video. :(
 						</video>
 						
-						<p>My Main Computer Setup (Gaming PC)</p>
+						<p>My old Computer Setup (Gaming PC) 2012 - 2017</p>
 						<ul>
-							<li>Intel Core I3 2120 @3.3GHz</li>
+							<li>Intel Core I3 2120 @3.3GHz Sandy Bridge</li>
 							<li>8 Gigabytes of DDR3 @ 1600MHz DIMM</li>
 							<li>MSI Nvidia GeForce GTX 750 TI 2 Gigabytes Overclocked Edition</li>
 							<li>1 Terabyte Hard Disk Drive 3.5"</li>
 							<li>Intel Mainboard</li>
 							<li>Inspiron 660</li>
+							<li>I-Rocks Mouse</li>
+							<li>Maltek Gaming Keyboard</li>
+							<li>Samsung 1920x1080 60Hz Monitor</li>
+						</ul>
+						<p>My Gaming Computer Setup (Gaming PC) 2017+</p>
+						<ul>
+							<li>Intel Core I7-7700 @3.6GHz Quad Core Kaby Lake</li>
+							<li>HyperX Fury Black DDR 4 2400MHz 8GB x2 Dual Channel</li>
+							<li>Asus Nvidia Geforce GTX 1070</li>
+							<li>256GB NVME SSD + 3TB Western Digital 7,200RPM HDD</li>
+							<li>ASUS Prime H270-PRO Mainboard</li>
+							<li>Stormforce Ventus</li>
 							<li>I-Rocks Mouse</li>
 							<li>Maltek Gaming Keyboard</li>
 							<li>Samsung 1920x1080 60Hz Monitor</li>
