--- a/about.html
+++ b/about.html
@@ -31,10 +31,8 @@
 						<img src="images/title/logo.png" alt="My logo" width="60" height="60"/>
 						<a href="index.html">Home</a>
 						<a href="software.html">Software</a>
-						<a href="hardware.html">Hardware</a>
 						<a href="cv.html">CV</a>
 						<a class="active" href="about.html">About</a>
-						<a href="links.html">Links</a>
 						<a href="sitemap.html">Sitemap</a>
 						<a href="games.html">Games</a>
 							
@@ -54,10 +52,10 @@
 						<h1>My Entire Story on how I became interested with computers</h1>
 						
 						<p>Once upon a time there was a young boy called Jordon, When he was about five he got his first computer that
-						his granddad has built him. The Boy liked using computers for playing games and surfing the Internet. It had a white case and wasn't very powerful, in fact it was running Microsoft Windows 98 which were good for that time before
+						his granddad had built him. The Boy liked using computers for playing games and surfing the Internet. It had a white case and wasn't very powerful, in fact it was running Microsoft Windows 98 which were good for that time before
 						Microsoft windows xp. As he got to primary school, he found friends. After many years of not having a father,
 						he was lucky enough to get a step father. When Jordon got to secondary school he liked helping people trying to fix the
-						schools computer. In year eight he had to make a website so he learned to use dreamweaver but he did not like the appearance of dragging boxes to make websites as they were slow.
+						school computers. In year eight he had to make a website so Jordon learned to use dreamweaver but he did not like the appearance of dragging boxes to make websites as they were slow.
 						When he got to year 10 he started programing on a small computer called a raspberry pi. His parents had also bought him a raspberry pi for dummies and Jordon used that
 						book to learn how to make a simple website. As years passed he developed his skills and branched his programming into many more languages.</p>
 						<img class="image" src="images/images/me.png" alt="This is me!"/>
