--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html manifest="website.appcache"><!-- Defines HTML code, for browser compatibility -->
-<head><meta http-equiv="Content-Type" content="text/html; charset=us-ascii"><!-- Defines the header of the website --><meta name="author" content="Jordon Brooks" ><meta name="description" content="Welcome to Jordon's Website!"><meta name="keywords" content="Jordon, Brooks, Jordon's, Software, jordonbc's, Website, GlassOS, Glass, OS,
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=us-ascii"><!-- Defines the header of the website -->
+	<meta name="author" content="Jordon Brooks" ><meta name="description" content="Welcome to Jordon's Website!">
+	<meta name="keywords" content="Jordon, Brooks, Jordon's, Software, jordonbc's, Website, GlassOS, Glass, OS,
 		Jpad, Open, Source, web, browser, JDE, Desktop, Environment, jordons, jordon, python, programming, software">
 	<title>Jordon&#39;s Website - Home</title>
 	<!-- Sets the title of the website--><!-- Sets the character set used by the website --><!-- Links the Cascading style sheets to the website -->
@@ -19,10 +22,8 @@
 	<!-- Displays the website logo --><img alt="My logo" height="60" src="images/title/logo.png" width="60" />
 	<!-- Links to Most used webpages --> <a class="active" href="index.html">Home</a>
 	<a href="software.html">Software</a>
-	<a href="hardware.html">Hardware</a>
 	<a href="cv.html">CV</a>
 	<a href="about.html">About</a>
-	<a href="links.html">Links</a>
 	<a href="sitemap.html">Sitemap</a>
 	<a href="games.html">Games</a>
 
@@ -35,27 +36,33 @@
 				</div> --><!-- Defines wrapper -->
 
 <div class="wrapper"><content> <!-- Another HTML5 tag that allows for Reading View -->
-<h1>Latest Blog</h1>
-<!-- Latest Blog title  for http://jordonIT.blogspot.co.uk --> <!-- The script That does all the magic --> <script src="https://feeds.feedburner.com/JordonsItBlog?format=sigpro" type="text/javascript" ></script>
 
-<article><!-- Defines an article -->
-<h2>Welcome to Jordon&#39;s Website!</h2>
-<!-- The title of the website -->
+	<article><!-- Defines an article -->
+		<h2>Welcome to Jordon&#39;s Website!</h2>
+		<!-- The title of the website -->
+	
+		<p><img alt="This is a picture of me." class="meImage" src="images/images/me.png" /> <!-- A picture of me -->
+			This website has programs that I have made, all my achievements, hardware and software videos and more.</p>
+	
+		<p>Hello my name is Jordon, I like computers and I am good at programming. I have even developed this website through code. I know quite a lot about programming, I know how to code in: Python, HTML, CSS, VBA, JavaScript, C# and I am currently learning to code in C++ by watching this <a href="https://www.youtube.com/watch?v=tvC1WCdV1XU&amp;list=PLAE85DE8440AA6B83&amp;index=1" target="_blank">series</a>.</p>
+	
+		<p>This website is also going to improve my skills as im coding it in plain HTML and CSS. At the moment the website has my programs that I have made in the past. On this website I also have my life story and what I did in the past to make me good on computers</p>
+	
+		<p></p>
+	
+		<p></p>
+	
+		<p></p>
+	</article>
 
-<p><img alt="This is a picture of me." class="meImage" src="images/images/me.png" /> <!-- A picture of me --> This website has programs that I have made, all my achievements, hardware and software videos and tips and more.</p>
+	<h1>Latest Blog</h1>
+	<!-- Latest Blog title  for http://jordonIT.blogspot.co.uk -->
 
-<p>Hello my name is Jordon, I like computers and I am good at programming. I have even developed this website through code. I know quite a lot about programming, I know how to code in: Python, HTML, CSS, VBA, JavaScript, C# and I am currently learning to code in C++ by watching this <a href="https://www.youtube.com/watch?v=tvC1WCdV1XU&amp;list=PLAE85DE8440AA6B83&amp;index=1" target="_blank">series</a>.</p>
+	<script src="https://feeds.feedburner.com/JordonsItBlog?format=sigpro" type="text/javascript" ></script> <!-- The script That does all the magic -->
 
-<p>This website is also going to improve my skills as I am also coding it. At the moment the website has my programs that I have made in the past. On this website I also have my life story and what I did in the past to make me good on computers</p>
-<!-- Some space for the CSS bar -->
+	<!-- Closes the article --> </content>
 
-<p></p>
-
-<p></p>
-
-<p></p>
-</article>
-<!-- Closes the article --> </content></div>
+</div>
 <br />
 <br />
 &nbsp;</div>
