--- a/terms.html
+++ b/terms.html
@@ -25,16 +25,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	</head>
 	<body>
-		<div align="center">
+		<div text-align="center">
 			<div class="topbar">
 					<nav>
 						<img src="images/title/logo.png" alt="My logo" width="60" height="60"/>
 						<a href="index.html">Home</a>
 						<a href="software.html">Software</a>
-						<a href="hardware.html">Hardware</a>
 						<a href="cv.html">CV</a>
 						<a href="about.html">About</a>
-						<a href="links.html">Links</a>
 						<a href="sitemap.html">Sitemap</a>
 						<a href="games.html">Games</a>
 						<a class="active" href="terms.html">Terms</a>
